--- a/p1/01onbeginnings/style01.css
+++ b/p1/01onbeginnings/style01.css
@@ -38,11 +38,12 @@
     position: relative;
     top: 500px;
     left: 45vw;
-    width: 50vw;
+    width: 45vw;
     padding-bottom: 100px;
     text-align: left;
     display: flex;
     flex-direction: column;
+    text-align: center;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
     /* border: 1px solid black; */
@@ -51,10 +52,10 @@
 }
 
 @keyframes floating3 {
-    0% {
+    0%,100% {
         transform: translateY(0);
     }
-    100% {
+    50% {
         transform: translateY(12px); /* Adjust the distance and direction */
     }
 }
@@ -68,6 +69,7 @@
     text-align: left;
     display: flex;
     flex-direction: column;
+    text-align: center;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
     /* border: 1px solid black; */
@@ -115,3 +117,8 @@
         -webkit-transform-origin: center center;
     }
   } */
+
+  .abandon:hover {
+    transition-duration: 1s;
+    color:#ceb196;
+  }
