--- a/p1/01onbeginnings/style01.css
+++ b/p1/01onbeginnings/style01.css
@@ -7,7 +7,7 @@
         transform: translateY(0);
     }
     50% {
-        transform: translateY(-10px); /* Adjust the distance and direction */
+        transform: translateY(-10px); 
     }
 }
 
@@ -30,7 +30,7 @@
         transform: translateY(0);
     }
     50% {
-        transform: translateY(-12px); /* Adjust the distance and direction */
+        transform: translateY(-12px);
     }
 }
 
@@ -56,7 +56,7 @@
         transform: translateY(0);
     }
     50% {
-        transform: translateY(12px); /* Adjust the distance and direction */
+        transform: translateY(12px); 
     }
 }
 
@@ -82,7 +82,7 @@
         transform: translateY(0);
     }
     100% {
-        transform: translateY(-15px); /* Adjust the distance and direction */
+        transform: translateY(-15px); 
     }
 }
 
@@ -98,6 +98,7 @@
     border-radius: 15px;
     border-color: black; 
     animation: fadein 1s forwards;
+    transition: ease-in-out 0.5s;
 }
 
 @keyframes fadeIn{
@@ -106,25 +107,40 @@
   }
 
 .content button:hover {
-    transition-duration: 1s;
     color:#ffffff;
     background: #000000;
     cursor: pointer;
     box-shadow: 0 0 15px #000000;
-    /* -webkit-animation: shake .75s ease-in-out infinite alternate; */
   }
-  
-  /* @-webkit-keyframes shake {
-    from {
-        -webkit-transform: rotate(5deg);
-    }
-    to {
-        -webkit-transform: rotate(-5deg);
-        -webkit-transform-origin: center center;
-    }
-  } */
 
   .abandon:hover {
     transition-duration: 1s;
     color:#ceb196;
+  }
+
+
+  @media only screen and (max-width: 768px) {
+    .content{
+        font-size: 1.5rem;
+    }
+
+    .content button {
+        font-size: 1.5rem;
+    }
+
+    #textContainer1 {
+        width: 70vw;
+    }
+    
+    
+    #textContainer2 {
+        left:4vw;
+        width: 70vw;
+    }
+
+    
+    #textContainer3 {
+        left:4vw;
+        width: 70vw;
+    }
   }
