--- a/p1/08goodnight/style08.css
+++ b/p1/08goodnight/style08.css
@@ -67,3 +67,13 @@ body {
         opacity: 100;
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .container {
+        width: 80vw;
+    }
+    
+    .content {
+        font-size: 1.25rem;
+    }
+}
