--- a/p1/style.css
+++ b/p1/style.css
@@ -1,9 +1,10 @@
 body {
+    margin: 0;
     background-repeat: no-repeat;
     animation: fadeInAnimation ease 3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
-    background-color: #FFF6EC
+    background-color: #FFF6EC;
 }
 
 @keyframes fadeInAnimation {
@@ -13,6 +14,60 @@ body {
     100% {
         opacity: 1;
      }
+}
+
+nav {
+    /* border: solid 4px red; */
+    display: flex;
+    text-align: center;
+    padding: 10px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height:fit-content;
+    color: #8f612c;
+}
+
+.box1{
+    text-align: left;
+    margin-left: 20px;
+    /* border: 1px solid #c23939; */
+}
+
+.box2{
+    text-align: center;
+    /* border: 1px solid #c23939; */
+}
+
+
+.box3{
+    text-align: right;
+    margin-right: 20px;
+    /* border: 1px solid #c23939; */
+}
+
+header {
+    position: fixed;
+    padding: 10px;
+    color: #8f612c;
+    margin: auto;
+    height: fit-content;
+    text-align: center;
+    width: 100vw;
+    align-items: center;
+    /* border: 1px solid black; */
+}
+
+footer {
+    position: fixed;
+    bottom: 10px;
+    margin:auto;
+    height: fit-content;
+    text-align: center;
+    width: 100vw;
+    align-items: center;
+    color: #8f612c;
+    /* border: 1px solid black; */
 }
 
 p {
@@ -33,40 +88,17 @@ a:visited {
 a:hover {
     transition: cubic-bezier(0.165, 0.84, 0.44, 1)0.5s;
     cursor: pointer;
-} 
-
-.header {
-    position: fixed;
-    color: #8f612c;
-    /* margin: auto; */
-    height: fit-content;
-    text-align: center;
-    width: 100vw;
-    align-items: center;
-    /* border: 1px solid black; */
 }
 
-.footer {
-    position: fixed;
-    bottom: 1px;
-    margin:auto;
-    height: fit-content;
-    text-align: center;
-    width: 100vw;
-    align-items: center;
-    color: #8f612c;
-    /* border: 1px solid black; */
-}
 
 .maincontainer {
-    display: inline-block;
     position: fixed;
-    margin:auto;
-    height: 100vh;
-    text-align: center;
     width: 100vw;
-    top: 22vh;
-    align-items: center;
+    height: 93vh;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    text-align: center;
     /* border: 1px solid black; */
 }
 
@@ -76,60 +108,26 @@ a:hover {
     font-style: normal;
     font-size: 1.5rem;
     letter-spacing: 0.5px;
-    transition-duration: 1s;
+    transition: ease-in-out 1.5s;
+
+    -webkit-animation: floating 7s ease-in-out infinite alternate;
+}
+
+@keyframes floating {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px); /* Adjust the distance and direction */
+    }
 }
 
 .navpoem a:hover {
     font-family: "adobe-garamond-pro", serif;
     font-weight: 700;
-    font-style: italic;
-    /* transition: ease-in-out cubic-bezier(0.645, 0.045, 0.355, 1) 0.5s; */
+    font-style: normal;
+    transition: ease-in-out 0.5s;
     cursor: pointer;
-}
-
-.typed-out {
-    position: relative;
-    overflow: hidden;
-    white-space: nowrap;
-    animation: typewriter 4s steps(44) 1s 1 normal both
-}
-
-
-.landing {
-    color:#FFF6EC;
-}
-
-
-.navcontainer {
-    padding-left: 10px;
-    padding-right: 10px;
-    /* border: solid 4px red; */
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    height:fit-content;
-    color: #8f612c;
-}
-
-.box1{
-    flex-grow: 1;
-    text-align: left;
-    /* border: 1px solid #c23939; */
-}
-
-.box2{
-    flex-grow: 1;
-    text-align: center;
-    /* border: 1px solid #c23939; */
-}
-
-
-.box3{
-    flex-grow: 1;
-    text-align: right;
-    /* border: 1px solid #c23939; */
 }
 
 .content {
@@ -140,4 +138,3 @@ a:hover {
     padding: 50px; 
     text-align: center;
 }
-
