--- a/p1/style.css
+++ b/p1/style.css
@@ -138,9 +138,9 @@ a:hover {
 
 .navpoem a:hover {
     font-family: "adobe-garamond-pro", serif;
-    font-weight: 700;
+    font-weight: 600;
     font-style: normal;
-    transition: ease-in-out 0.5s;
+    filter: drop-shadow(0px 0px 0.5px black);
     cursor: pointer;
 }
 
