--- a/p1/style.css
+++ b/p1/style.css
@@ -74,6 +74,20 @@ footer {
     /* border: 1px solid black; */
 }
 
+.back {
+    font-family: "adobe-garamond-pro", serif;
+    font-weight: 400;
+    font-style: normal;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+}
+
+.back a {
+    text-decoration: none;
+    color: #FFF6EC;
+}
+
 p {
     font-family: "adobe-garamond-pro", serif;
     font-weight: 400;
