--- a/style.css
+++ b/style.css
@@ -180,6 +180,11 @@ h3 {
 
 
 @media only screen and (max-width: 768px) {
+    body {
+        margin:0;
+        overflow-y: hidden;
+    }
+    
     .flower1 {
         top: 9vh;
         left: 7vw;
